@@ -14,6 +14,11 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+12 November 2014 V. Ivanchenko (hadr-man-V10-00-15)
+---------------------------------------------------
+- G4HadronicProcess - fixed final track status for some models like 
+    G4WilsonAbrasionModel
+
 11 November 2014 V. Ivanchenko (hadr-man-V10-00-14)
 ---------------------------------------------------
 - G4HadronicProcess - clear final state before resample interaction
